--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
   "name": "jb-api",
-  "version": "0.0.1",
-  "description": "API for jasonbejot.com",
+  "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "dependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mocha": "^2.4.5",
-    "mongodb": "^2.1.16",
-    "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
-  },
-  "engine": {
-    "node": "*",
-    "npm": "*"
-  },
   "scripts": {
-    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/corpsecouch/jb-api.git"
+    "url": "git+https://github.com/corpsecouch/jb-api.git"
   },
-  "author": "Jasonbejot",
+  "author": "Jason Bejot",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/corpsecouch/jb-api/issues"
   },
-  "homepage": "https://github.com/corpsecouch/jb-api"
+  "homepage": "https://github.com/corpsecouch/jb-api#readme"
 }
