--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/corpsecouch/jb-api/issues"
   },
-  "homepage": "https://github.com/corpsecouch/jb-api#readme"
+  "homepage": "https://github.com/corpsecouch/jb-api#readme",
+  "dependencies": {
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
+  }
 }
