--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/corpsecouch/jb-api#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "mongodb": "^2.2.33",
+    "morgan": "^1.9.0",
+    "object-assign": "^4.1.1"
   }
 }
