--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33",
     "morgan": "^1.9.0",
-    "object-assign": "^4.1.1"
+    "object-assign": "^4.1.1",
+    "xml2js": "^0.4.19"
   }
 }
