--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "express": "^4.16.2",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
-    "object-assign": "^4.1.1",
-    "xml2js": "^0.4.19"
+    "object-assign": "^4.1.1"
   }
 }
